# md-converters

./: .gitignore  CLAUDE.md  CODEX.md  LICENSE  README.md  _nostd.py  convert_html_to_md.py  convert_pdf_to_md.py  convert_to_md.py  gui_server.py  install.ps1  pyproject.toml  rt.txt
.github/workflows/: ci.yml
docs/: gui-contract.md  gui-guide.md  gui-loop-prompt.md  gui-web-architecture.md  pdf-tables-proposal.md
docs/audit/: audit-2026-06-17-ci-node24-actions-bump.md  audit-2026-06-17-ci-sha-pinning.md  audit-2026-06-27-pdf-and-project.md  audit-task-2026-06-27-pdf-and-project.md
docs/vibe-audit/: audit-report.md  future-ideas.md
docs/vibe-audit/evidence/2026-06-13/: audit-task-commit-32b2c20.md  audit-task-commit-a3db70f.md  audit-task-commit-fdafd4d.md  cyclonedx-dev-sbom.json  cyclonedx-runtime-sbom.json  requirements-dev-audit.txt  requirements-runtime-audit.txt  supply-chain-dev-licenses.json  supply-chain-licenses.json
docs/vibe-audit/evidence/2026-06-16/: audit-task-commit-61dec35.md
docs/vibe-audit/evidence/2026-06-17/: audit-task-commit-3a1675b.md
examples/: sample-report.html  sample-report.md
gui_static/: __init__.py  index.html
tests/: test_cli_and_targets.py  test_entrypoints_and_interactive.py  test_gui.py  test_html_encoding.py  test_markdown_safety.py  test_pdf_tables.py  test_pdf_text_layer.py  test_resource_limits.py  test_supply_chain_report.py  test_url_policy.py  test_windows_installer.py
tools/: make_icon.py  make_image_only_pdf.py  supply_chain_report.py
