[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "md-converters"
version = "1.3.0"
description = "Конвертация документов (PDF, HTML, Word, Excel, PowerPoint и др.) в Markdown на базе MarkItDown"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vitaly Pikov" }]
keywords = ["markdown", "pdf", "html", "docx", "xlsx", "converter", "markitdown"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Markup :: Markdown",
]
# Не [all]: его youtube-transcript-api требует Python < 3.14, из-за чего
# pip на 3.14 молча откатывается на древний markitdown 0.0.2.
# Потолок <1.0.0 — чтобы мажорный релиз не прилетел молча.
dependencies = [
    "charset-normalizer>=3,<4",
    # magika 0.6.3 resolves to onnxruntime 1.20.1, which has no cp314 wheels.
    # Keep 0.6.2 until upstream publishes a 3.14-compatible dependency graph.
    "magika>=0.6.2,<0.6.3",
    # onnxruntime 1.24+ dropped cp310 wheels; 1.20.1 lacks cp314 wheels.
    "onnxruntime>=1.20.1,<1.21; python_version < '3.11'",
    "onnxruntime>=1.26,<2; python_version >= '3.11'",
    "markitdown[pdf,docx,pptx,xlsx,xls,outlook]>=0.1.0,<1.0.0",
    # pdfplumber и pypdfium2 импортируются напрямую (извлечение PDF-таблиц
    # по геометрии и подсчёт страниц для диагностики image-only PDF).
    # Объявлены явно, а не как транзитивные через markitdown[pdf]: под
    # потолком markitdown<1.0.0 состав extra может измениться и молча
    # сломать импорт. MIT / BSD-3 / Apache-2.0 — без AGPL.
    "pdfplumber>=0.11.9,<1.0.0",
    "pypdfium2>=4,<6",
]

[dependency-groups]
dev = [
    "pip-audit>=2.9,<3",
    "pytest>=9,<10",
    "ruff>=0.13,<0.14",
]

[project.urls]
Homepage = "https://github.com/pikov-vitaliy/md-converters"

[project.scripts]
tomd = "convert_to_md:cli_tomd"
pdf2md = "convert_to_md:cli_pdf"
html2md = "convert_to_md:cli_html"

[tool.setuptools]
py-modules = ["convert_to_md"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W"]
